networkpolicies/busybox.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: busybox-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: busybox
    ports:
    - protocol: TCP
      port: 80
